--- a/timetable.html
+++ b/timetable.html
@@ -32,7 +32,7 @@
     <td style="font-size:18px">Period 1</td>
     <td><p style="font-size:11px">9:00<br></p>Art<br><p style="font-size:11px">HU &#8212; C22</p></td>
     <td><p style="font-size:11px">8:45<br></p>English<br><p style="font-size:11px">Various</p></td>
-	<td><p style="font-size:11px">8:45<br></p>Humanities<br><p style="font-size:11px">DMT &#8212; O26</p></td>
+	<td><p style="font-size:11px">8:45<br></p>Humanities<br><p style="font-size:11px">KAL &#8212; C12</p></td>
     <td><p style="font-size:11px">9:00<br></p>English<br><p style="font-size:11px">Various</p></td>
     <td><p style="font-size:11px">9:00<br></p>Mathematics<br><p style="font-size:11px">Various &#8212; O1(X)</p></td>
   </tr>
@@ -47,18 +47,18 @@
   <tr>
   	<td style="font-size:18px">Period 3</td>
   	<td><p style="font-size:11px">10:30<br></p>Science<br><p style="font-size:11px">Various</p></td>
-    <td><p style="font-size:11px">10:05<br></p>Theology<br><p style="font-size:11px">STL &#8212; A24</p></td>
+    <td><p style="font-size:11px">10:05<br></p>Theology<br><p style="font-size:11px">STL &#8212; C12</p></td>
     <td><p style="font-size:11px">10:05<br></p>Mathematics<br><p style="font-size:11px">Various &#8212; O1(X)</p></td>
     <td><p style="font-size:11px">10:30<br></p>Physical Education<br><p style="font-size:11px">HAH &#8212; GYM</p></td>
     <td><p style="font-size:11px">10:30<br></p>Physical Education<br><p style="font-size:11px">HAH &#8212; GYM</p></td>
   </tr>
   <tr>
   	<td style="font-size:18px">Interval</td>
-  	<td><p style="font-size:11px">11:15<br></p><p style="font-size:9px">Backgammon/Chess<br></p></td>
-    <td><p style="font-size:11px">10:45<br></p><p style="font-size:9px">Backgammon/Chess<br></p></td>
-    <td><p style="font-size:11px">10:45<br></p><p style="font-size:9px">Backgammon/Chess<br></p></td>
+  	<td><p style="font-size:11px">11:15<br></p><p style="font-size:9px">&#10240<br></p></td>
+    <td><p style="font-size:11px">10:45<br></p><p style="font-size:9px">&#10240<br></p></td>
+    <td><p style="font-size:11px">10:45<br></p><p style="font-size:9px">&#10240<br></p></td>
     <td><p style="font-size:11px">11:15<br></p><p style="font-size:9px">&#10240;<br></p></td>
-    <td><p style="font-size:11px">11:15<br></p><p style="font-size:9px">Backgammon/Chess<br></p></td>
+    <td><p style="font-size:11px">11:15<br></p><p style="font-size:9px">&#10240<br></p></td>
   </tr>
   <tr>
   	<td style="font-size:18px">Period 4</td>
@@ -70,33 +70,33 @@
   </tr>
   <tr>
   	<td style="font-size:18px">Period 5</td>
-  	<td><p style="font-size:11px">12:25<br></p>Humanities<br><p style="font-size:11px">DMT &#8212; O26</p></td>
-    <td><p style="font-size:11px">11:55<br></p>Music<br><p style="font-size:11px">IVE &#8212; T11</p></td>
-    <td><p style="font-size:11px">11:55<br></p>Theology<br><p style="font-size:11px">STL &#8212; A24</p></td>
-    <td><p style="font-size:11px">12:25<br></p>Humanities<br><p style="font-size:11px">DMT &#8212; O26</p></td>
-    <td><p style="font-size:11px">12:25<br></p>Theology<br><p style="font-size:11px">STL &#8212; A24</p></td>
+  	<td><p style="font-size:11px">12:25<br></p>Humanities<br><p style="font-size:11px">KAL &#8212; C12</p></td>
+    <td><p style="font-size:11px">11:55<br></p>Music<br><p style="font-size:11px">IVE &#8212; M01</p></td>
+    <td><p style="font-size:11px">11:55<br></p>Theology<br><p style="font-size:11px">STL &#8212; C12</p></td>
+    <td><p style="font-size:11px">12:25<br></p>Humanities<br><p style="font-size:11px">DMT &#8212; C12</p></td>
+    <td><p style="font-size:11px">12:25<br></p>Theology<br><p style="font-size:11px">STL &#8212; C12</p></td>
   </tr>
   <tr>
   	<td style="font-size:18px">Period 5a</td>
   	<td style="font-size:11px">&#10240;</td>
     <td><p style="font-size:11px">12:35<br></p>Science<br><p style="font-size:11px">Various</p></td>
-    <td><p style="font-size:11px">12:35<br></p>House Time<br><p style="font-size:11px">Various</p></td>
+    <td><p style="font-size:11px">12:35<br></p>theology<br><p style="font-size:11px">Various</p></td>
     <td style="font-size:11px">&#10240;</td>
     <td style="font-size:11px">&#10240;</td>
   </tr>
   <tr>
   	<td style="font-size:18px">Lunch</td>
-  	<td><p style="font-size:11px">13:05<br></p><p style="font-size:9px">Backgammon/Chess<br></p></td>
-    <td><p style="font-size:11px">13:15<br></p><p style="font-size:9px">Backgammon/Chess<br></p></td>
+  	<td><p style="font-size:11px">13:05<br></p><p style="font-size:9px">&#10240<br></p></td>
+    <td><p style="font-size:11px">13:15<br></p><p style="font-size:9px">&#10240<br></p></td>
     <td><p style="font-size:11px">13:15<br></p><p style="font-size:9px">&#10240;<br></p></td>
-    <td><p style="font-size:11px">13:05<br></p><p style="font-size:9px">Backgammon/Chess<br></p></td>
-    <td><p style="font-size:11px">13:05<br></p><p style="font-size:9px">Backgammon/Chess<br></p></td>
+    <td><p style="font-size:11px">13:05<br></p><p style="font-size:9px">&#10240<br></p></td>
+    <td><p style="font-size:11px">13:05<br></p><p style="font-size:9px">&#10240<br></p></td>
   </tr>
   <tr>
   	<td style="font-size:18px">Period 6</td>
-  	<td><p style="font-size:11px">13:35<br></p>Theology<br><p style="font-size:11px">STL &#8212; A24</p></td>
+  	<td><p style="font-size:11px">13:35<br></p>Theology<br><p style="font-size:11px">STL &#8212; C12</p></td>
     <td><p style="font-size:11px">13:50<br></p>Mathematics<br><p style="font-size:11px">Various &#8212; O1(X)</p></td>
-    <td><p style="font-size:11px">13:50<br></p>Leadership<br><p style="font-size:11px">FRI &#8212; C14</p></td>
+    <td><p style="font-size:11px">13:50<br></p>Leadership<br><p style="font-size:11px">FRI &#8212; C12</p></td>
     <td><p style="font-size:11px">13:35<br></p>Science<br><p style="font-size:11px">Various</p></td>
     <td><p style="font-size:11px">13:35<br></p>English<br><p style="font-size:11px">Various</p></td>
   </tr>
@@ -106,7 +106,7 @@
     <td><p style="font-size:11px">14:30<br></p>Language<br><p style="font-size:11px">Various</p></td>
     <td><p style="font-size:11px">14:30<br></p>Hard Materials<br><p style="font-size:11px">LIM &#8212; T01</p></td>
     <td><p style="font-size:11px">14:20<br></p>Mathematics<br><p style="font-size:11px">Various &#8212; O1(X)</p></td>
-    <td><p style="font-size:11px">14:20<br></p>Humanities<br><p style="font-size:11px">DMT &#8212; O26</p></td>
+    <td><p style="font-size:11px">14:20<br></p>Humanities<br><p style="font-size:11px">KAL &#8212; C12</p></td>
   </tr>
 
 </table>
