--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    </title>
   </head>
   <body>
-     <p style="background-color: khaki; padding: 500px; border-color: lightgreen; border-width: 15px; font-size: 60px; font-style: italic; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-variant: small-caps;">
+     <p style="background-color: khaki; padding: 500px; border-color: lightgreen; border-width: 15px; font-size: 60px; font-style: italic; font-family: Cochin, Georgia, Times, 'Times New Roman', serif; font-variant: small-caps;">
          This website and system is currently under development, please check back in at a later stage
      </p>
  </body>
