--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         <p>&#10240;</p>
         <p>&#10240;</p>
             <img style="padding-left:10%;" src="ai-5.webp" alt="Wonderful Flowers sketched by AI">
-            <code style="padding-left: 36%; padding-top: 2px;" class="caption">An AI stylised image of some flowers at cornwallis beach</code>
+            <code style="padding-left: 36%; padding-top: 2px; align: center" class="caption">An AI stylised image of some flowers at cornwallis beach</code>
             <p>&#10240;</p>
             <div class="font">
             <table>
