--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         </title>
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" type="image/x-icon" href="favicon.png">
+        <meta content="Adam Tansell-Murrow" property="og:title">
+        <meta content="School Coding Project" property="og:description">
+        <meta content="https://www.ATMmachine.gq" property="og:url">
+        <meta content="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Karte_des_Kaukasischen_Isthmus_-_Entworfen_und_gezeichnet_von_J-Grassl_-_1856.jpg/1024px-Karte_des_Kaukasischen_Isthmus_-_Entworfen_und_gezeichnet_von_J-Grassl_-_1856.jpg" property="og:image">
+        <meta content="#ff0038" data-react-helmet="true" name="theme-color">
     </head>
     <div>
         <div class="hamburger-menu">
