--- a/hobbies.html
+++ b/hobbies.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>
-            About
+            Hobbies
         </title>
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" type="image/x-icon" href="favicon.png">
