width fix (hopeful)

--- a/hobbies.html
+++ b/hobbies.html
@@ -40,7 +40,7 @@
             <table>
                 <tr>
                     <th><code style="padding-left: 36%; padding-top: 2px;" class="caption">The Public Domain 1945 Movie "And Then There Were None"</code></th>
-                    <th><video src="https://ia600101.us.archive.org/3/items/attwn994545112/attwn994545112.mp4" type="video/ogv" controls="" alt="Copyright Lapsed by 20th Century Fox (source=https://commons.wikimedia.org/wiki/File:And_Then_There_Were_None,_1945.webm)"></video></th>
+                    <th><video width="50%" src="https://ia600101.us.archive.org/3/items/attwn994545112/attwn994545112.mp4" type="video/ogv" controls="" alt="Copyright Lapsed by 20th Century Fox (source=https://commons.wikimedia.org/wiki/File:And_Then_There_Were_None,_1945.webm)"></video></th>
                 </tr>
                 <tr>
                     <th><p>--</p></th>
