--- a/about.html
+++ b/about.html
@@ -38,8 +38,8 @@
         </div>
         <p>&#10240;</p>
         <p>&#10240;</p>
-            <img style="padding-left:10%;" src="ai-5.webp" alt="Wonderful Flowers sketched by AI">
-            <code style="padding-left: 36%; padding-top: 2px; align: center" class="caption">An AI stylised image of some flowers at cornwallis beach</code>
+            <img style="padding-left:10%; padding-right:10%;" src="ai-5.webp" alt="Wonderful Flowers sketched by AI">
+            <code style="padding-left: 36%; padding-top: 2px; padding-right:36%;" class="caption">An AI stylised image of some flowers at cornwallis beach</code>
             <p>&#10240;</p>
             <div class="font">
             <table>
