fix image caption color

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </h1>
         </div>
             <img class="img-fit" src="img-welcome.png" alt="AI Generated Image of a glacier">
-            <code style="padding-left: 43%; padding-top: 2px;" class="caption">AI Generated Image of a glacier</code>
+            <code style="padding-left: 43%; padding-top: 2px; color: antiquewhite;" class="caption">AI Generated Image of a glacier</code>
             <p>&#10240;</p>
             <div class="font">
                 <table>
