--- a/about.html
+++ b/about.html
@@ -24,10 +24,10 @@
                     </label>
                 
                     <ul class="menu__box">
-                      <li><a class="menu__item" href="index.html">Home</a></li>
-                      <li><a class="menu__item" href="about.html">About</a></li>
-                      <li><a class="menu__item" href="hobbies.html">Hobbies</a></li>
-                      <li><a class="menu__item" href="contact.html">Contact</a></li>
+                      <li><a class="menu__item" href="http://www.atmmachine.gq./">Home</a></li>
+                      <li><a class="menu__item" href="http://www.atmmachine.gq./about">About</a></li>
+                      <li><a class="menu__item" href="http://www.atmmachine.gq./hobbies">Hobbies</a></li>
+                      <li><a class="menu__item" href="http://www.atmmachine.gq./contact">Contact</a></li>
                       <li><a class="menu__item" href="https://atmmachine.freeflarum.com" target="__blank__">Forum</a></li>
                       <li><a class="menu__item" href="https://who.is" target="__blank__">WhoIs</a></li>
                       <li><a class="menu__item" href="https://archive.org" target="__blank__">Archive</a></li>
