--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </label>
     
         <ul class="menu__box">
-          <li><a class="menu__item" href="http://www.atmmachine.gq./index">Home</a></li>
-          <li><a class="menu__item" href="http://www.atmmachine.gq./about">About</a></li>
-          <li><a class="menu__item" href="http://www.atmmachine.gq./hobbies">Hobbies</a></li>
-          <li><a class="menu__item" href="http://www.atmmachine.gq./contact">Contact</a></li>
+          <li><a class="menu__item" href="index">Home</a></li>
+          <li><a class="menu__item" href="about">About</a></li>
+          <li><a class="menu__item" href="hobbies">Hobbies</a></li>
+          <li><a class="menu__item" href="contact">Contact</a></li>
           <li><a class="menu__item" href="https://atmmachine.freeflarum.com" target="__blank__">Forum</a></li>
           <li><a class="menu__item" href="https://who.is" target="__blank__">WhoIs</a></li>
           <li><a class="menu__item" href="https://archive.org" target="__blank__">Archive</a></li>
