redirect mobile users
cause f*** them

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <meta content="https://www.ATMmachine.gq" property="og:url">
         <meta content="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Karte_des_Kaukasischen_Isthmus_-_Entworfen_und_gezeichnet_von_J-Grassl_-_1856.jpg/1024px-Karte_des_Kaukasischen_Isthmus_-_Entworfen_und_gezeichnet_von_J-Grassl_-_1856.jpg" property="og:image">
         <meta content="#ff0038" data-react-helmet="true" name="theme-color">
+        <script>
+            if (screen.width <= 699) {
+                document.location = "http://www.atmmachine.gq./mobile"
+            }
+        </script>
     </head>
     <div>
         <div class="hamburger-menu">
