--- a/mobile.html
+++ b/mobile.html
@@ -12,6 +12,11 @@
         <meta content="https://www.ATMmachine.gq" property="og:url">
         <meta content="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Karte_des_Kaukasischen_Isthmus_-_Entworfen_und_gezeichnet_von_J-Grassl_-_1856.jpg/1024px-Karte_des_Kaukasischen_Isthmus_-_Entworfen_und_gezeichnet_von_J-Grassl_-_1856.jpg" property="og:image">
         <meta content="#ff0038" data-react-helmet="true" name="theme-color">
+        <script>
+            if (screen.width >= 700) {
+                document.location = "http://www.atmmachine.gq./"
+            }
+        </script>
     </head>
     <body>
         <h1 class="font" style="margin:5%; font-size:large"><a href="index.html"><img style="max-width:5%;" src="favicon.png"></a> Adam Tansell-Murrow</h1>
